--- a/research.html
+++ b/research.html
@@ -18,6 +18,17 @@ permalink: /research/
   mainly drive the effects. The findings imply PLcenters reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
   </p><br>
 
+<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Attention, Capital Structure, and Market Integration</a></strong> 
+<br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
+<p style="text-align:justify"><b><i>Abstract: </i>
+  </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
+  thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
+  green taste endogenously allocates attention to market or firm-specific shocks.  We find that more green-motivated investors tend to
+  give more attention to green firm-level information instead of market-level information. As a result, higher green taste leads to less category 
+  learning behavior and reduces the information asymmetry. Furthermore, we find higher green taste results in lower leverage and 
+  lower cost of capital of green firms. 
+  </p><br>
+
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
 <br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a><br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
@@ -30,8 +41,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 <br> 
 
 <strong><big><a>Work in Progress</a></big></strong> <br> 
-<strong><a>Green Attention, Capital Structure, and Market Integration</a></strong> 
-<br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
+
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
 <br>with <a>Yutong Hu</a><br>
