--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@ permalink: /research/
   mainly drive the effects. The findings imply PLcenters reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
   </p><br>
 
-<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Attention, Capital Structure, and Market Integration</a></strong> 
+<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
