--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ title:  Shasha Li 厉莎莎
 <img src="content/Lisa.jpg" alt="LI Shasha pic" style="width:480px;height:auto;" title="LI Shasha"; algin="middle">
  <br><br>
   
-  <p style="text-align:left;">W1 Junior Professor
+  <p style="text-align:left;">Hello, welcome!
+   <br><br> I am a W1 Junior Professor at
+ Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg.
   <br><br>
- Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
-  <br><br>
- Research Interest: Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
+ My research interest lies in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
   </p>
   
 
