--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title:  Shasha Li 厉莎莎
 <img src="content/Lisa.jpg" alt="LI Shasha pic" style="width:480px;height:auto;" title="LI Shasha"; algin="middle">
  <br><br>
   
-  <p style="text-align:left;">Hello, welcome!
+  <p style="text-align:left;">Welcome!
    <br><br> I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg.
   <br><br>
