--- a/teachings.html
+++ b/teachings.html
@@ -3,6 +3,12 @@ layout: page
 title: Teaching
 permalink: /teachings/
 ---
+<strong><a>Otto von Guericke University Magdeburg (Instructor)</a></strong> <br><br>
+<p style="text-align:justify"><i>Master: </i><br>Foundations for Finance.</p>
+
+<br>
+
+
 
 <strong><a>Bocconi University (TA/Tutor)</a></strong> <br><br>
 <p style="text-align:justify"><i>PhD: </i> <br>Corporate Finance (Instructors: Stefano Rossi and Thorsten Martin);</p>
@@ -13,7 +19,3 @@ Economy (Instructor: Claudio Zara); <br>Econometrics (Instructor: Massimiliano M
 <br>Macroeconomics (Instructors: Basile Grassi, Patrice De Micco and Tommy Murphy); <br>International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
 <br>
 
-<strong><a>Peking University (TA)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i><br>Numerical Methods and Analysis (Instructor: Kwangwon Ahn); <br>Applied Stochastic Processes (Instructor: Kwangwon Ahn).</p>
-
-<br>
