--- a/research.html
+++ b/research.html
@@ -20,6 +20,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
+<em><small>Presentation: Econometric Society Winter Meeting 2021 (scheduled)</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
   thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
