--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@ permalink: /research/
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
 <strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong><br>
-<em><small>Presentation: 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
+<em><small>Presentation: 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society European Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service on marketplace 
   lending outcomes. From 2012, the Chinese government gradually introduced private-lending registration service centers (PLcenters) in many cities to 
@@ -20,7 +20,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
-<em><small>Presentation: Econometric Society Winter Meeting 2021 (scheduled)</small></em>
+<em><small>Presentation: Econometric Society European Winter Meeting 2021 (scheduled)</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
   thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
