--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
-<em><small>Presentation: Econometric Society European Winter Meeting 2021 (scheduled)</small></em>
+<em><small>Presentation: Bocconi La Strada Seminar*; Econometric Society European Winter Meeting 2021 (scheduled)</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
   thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
@@ -46,3 +46,10 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
 <br>with <a>Yutong Hu</a><br>
+
+<br> 
+<br> 
+<br> 
+<i>*: presented by coauthor(s)</i>
+<br> 
+<br> 
