--- a/teachings.html
+++ b/teachings.html
@@ -4,7 +4,7 @@ title: Teaching
 permalink: /teachings/
 ---
 <strong><a>Otto von Guericke University Magdeburg (Instructor)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i><br>Foundations for Finance; <br>Seminar: Fintechs and Digitalization of Banking;</p>
+<p style="text-align:justify"><i>Master: </i><br>Foundations for Finance; <br>Seminar: Fintechs and Digitalization of Banking.</p>
 
 
 <br>
