--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@ permalink: /research/
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
 <strong>Lighthouse in the Dark: Search in Marketplace Lending</a></strong><br>
-<em><small>Presentation: 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society European Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
+<em><small>Presentation: 2022 EEA (scheduled); 2022 China Fintech Research Conference; 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society European Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service on marketplace 
   lending outcomes. From 2012, the Chinese government gradually introduced private-lending registration service centers (PLcenters) in many cities to 
@@ -20,7 +20,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
-<em><small>Presentation: Bocconi La Strada Seminar*; Econometric Society European Winter Meeting 2021; IWH Brown Bag Seminar</small></em>
+<em><small>Presentation: Yonsei university; Bocconi La Strada Seminar*; Econometric Society European Winter Meeting 2021; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
   thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
@@ -46,7 +46,15 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
 <br>with <a>Yutong Hu</a><br>
-
+<em><small>Presentation: 2022 China Fintech Research Conference</small></em>
+<p style="text-align:justify"><b><i>Abstract: </i>
+  </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
+  Using a data set of peer-to-peer loans from a leading online lending platform in China, we find that the platform substantially 
+  under-report the default rate by cooperating with an offline sister company. Our baseline results suggest that the monthly default
+  rates are on average under-reported by 14\%. The data shows that the LGD-adjusted interest rate fails to predict the default, 
+  and the market is not efficient. Furthermore, hidden default data drives the online market further away from information efficiency.
+  And liquidity plays an important role in the deviations of the market prices from the information-efficient level.
+  </p><br>
 <br> 
 <br> 
 <br> 
