--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
 <br>with <a>Yutong Hu</a><br>
-<em><small>Presentation: 2022 China Fintech Research Conference</small></em>
+<em><small>Presentation: 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
   Using a data set of peer-to-peer loans from a leading online lending platform in China, we find that the platform substantially 
