--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@ economy with higher money growth rate only in the long-run but not in the short-
   </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
   Using a data set of peer-to-peer loans from a leading online lending platform in China, we find that the platform substantially 
   under-report the default rate by cooperating with an offline sister company. Our baseline results suggest that the monthly default
-  rates are on average under-reported by 14\%. The data shows that the LGD-adjusted interest rate fails to predict the default, 
+  rates are on average under-reported by 14%. The data shows that the LGD-adjusted interest rate fails to predict the default, 
   and the market is not efficient. Furthermore, hidden default data drives the online market further away from information efficiency.
   And liquidity plays an important role in the deviations of the market prices from the information-efficient level.
   </p><br>
