--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
-<br>with <a>Yutong Hu</a><br>
+<br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
 <em><small>Presentation: 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
