--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title:  Shasha Li 厉莎莎
    <br><br> I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg.
   <br><br>
- My research interest lies in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
+ My research interest lies in Corporate Finance, Fintech and Credit, particularly interested financial frictions and information frictions.
   </p>
   
 
