--- a/teachings.html
+++ b/teachings.html
@@ -5,7 +5,7 @@ permalink: /teachings/
 ---
 <strong><a>Otto von Guericke University Magdeburg (Instructor)</a></strong> <br><br>
 <p style="text-align:justify"><i>Master: </i><br>Foundations for Finance; 
-  <br>Seminar: Fintechs and Digitalization of Banking <a href="https://shasha-li.github.io/content/Syllabus%202022.pdf">(Syllabus 2022); </a>
+  <br>Seminar: Fintechs and Digitalization of Banking <a href="https://shasha-li.github.io/content/Syllabus%202022.pdf">(Syllabus 2022)</a>; 
    <br>A Talk in Lecture Series “Economy and Society”: Technological Revolution in Financial Services <a href="https://shasha-li.github.io/content/TechRevFinService.pdf">(Slides 2022/23 Winter)</a>.
 </p>
 <br>
