--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title:  Shasha Li 厉莎莎
    <br><br> I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg.
   <br><br>
- My research interest lies in Corporate, Fintech and Credit, particularly financial and information frictions in the economy.
+I am interested in studying the impact of technological change and information frictions on financing activities and their subsequent real economic impacts.
   </p>
   
 
