--- a/research.html
+++ b/research.html
@@ -61,3 +61,11 @@ economy with higher money growth rate only in the long-run but not in the short-
 <i>*: presented by coauthor(s)</i>
 <br> 
 <br> 
+<br> 
+<strong><big><a>Discussions</a></big></strong> <br> <br> 
+<strong><a>2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence,</a></strong> <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf">(Discussion Slides).</a>
+<br> <strong><a>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics,</a></strong> <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf">(Discussion Slides).</a><br> 
+<br> <strong><a>2022 HUI workshop, Consumer Credit and Impulse Shopping,</a></strong> <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf">(Discussion Slides).</a><br> 
+<br> 
+<br> 
+<br> 
