--- a/research.html
+++ b/research.html
@@ -63,9 +63,9 @@ economy with higher money growth rate only in the long-run but not in the short-
 <br> 
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br> <br> 
-<strong><a>2023 EFA</a></strong>, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
-<br> <strong><a>2022 China Fintech Research Conference</a></strong>, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a><br> 
-<br> <strong><a>2022 HUI workshop</a></strong>, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
+2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
+<br>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
+<br>2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
 <br> 
 <br> 
 <br> 
