--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <br> 
 
-<strong><big><a>Work in Progress</a></big></strong> <br> 
+<strong><big><a>Work in Progress</a></big></strong> <br> <br> 
 
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
