--- a/research.html
+++ b/research.html
@@ -37,9 +37,9 @@ In-Advance (CIA) framework, we examine the welfare cost of default and how the
 injection of cash affects welfare cost of default. Incorporating non-linear form of nonpecuniary
 default penalty into a CIA model, we find that default causes around 1% loss
 in consumption. The negative effects of default on welfare is significantly greater in an
-economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
+economy with higher money growth rate only in the long-run but not in the short-run.</p><br><br><br>
 
-<br> 
+
 
 <strong><big><a>Work in Progress</a></big></strong> <br> <br> 
 
@@ -55,8 +55,6 @@ economy with higher money growth rate only in the long-run but not in the short-
   and the market is not efficient. Furthermore, hidden default data drives the online market further away from information efficiency.
   And liquidity plays an important role in the deviations of the market prices from the information-efficient level.
   </p><br>
-<br> 
-<br> 
 <br> 
 <i>*: presented by coauthor(s)</i>
 <br> 
