--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
-<em><small>Presentation: 2023 EEA* (scheduled); Yonsei university; Bocconi La Strada Seminar*; Econometric Society European Winter Meeting 2021; IWH Brown Bag Seminar</small></em>
+<em><small>Presentation: 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; Econometric Society European Winter Meeting 2021; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
   thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
@@ -62,8 +62,8 @@ economy with higher money growth rate only in the long-run but not in the short-
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br> <br> 
 2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
-<br>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
-<br>2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
+<br> <br>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
+<br> <br>2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
 <br> 
 <br> 
 <br> 
