--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <strong><a>Data Manipulation in Marketplace Lending</a></strong>
 <br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
-<em><small>Presentation: HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<em><small>Presentation: WinE Mentoring Retreat 2023; HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
   Using a data set of peer-to-peer loans from a leading online lending platform in China, we find that the platform substantially 
@@ -62,8 +62,7 @@ economy with higher money growth rate only in the long-run but not in the short-
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br> <br> 
 2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
-<br> <br>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
-<br> <br>2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
-<br> 
+<br>2022 China Fintech Research Conference, Influence of institutional differences on trade credit use during pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
+<br>2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
 <br> 
 <br> 
