--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ title:  Shasha Li 厉莎莎
    <br><br> I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg.
   <br><br>
-I am interested in studying the impact of technological change and information frictions on financing activities and their subsequent real economic impacts.<br>
-I am particularly enthusiastic about bridging theoretical frameworks and empirical analysis in my work.
+I study the impact of technological change and information frictions on financing activities and their subsequent real economic impacts. I am particularly enthusiastic about bridging theoretical frameworks and empirical analysis in my work.
   </p>
   
 
