--- a/teachings.html
+++ b/teachings.html
@@ -6,7 +6,8 @@ permalink: /teachings/
 <strong><a>Otto von Guericke University Magdeburg (Instructor)</a></strong> <br><br>
 <p style="text-align:justify"><i>Master: </i><br>Foundations for Finance (<a href="https://shasha-li.github.io/content/CPSyllabus%202021.pdf">Syllabus 2021 Winter</a>, <a href="https://shasha-li.github.io/content/CPSyllabus%202022.pdf">Syllabus 2022 Winter</a>); 
   <br>Seminar: Fintechs and Digitalization of Banking (<a href="https://shasha-li.github.io/content/Syllabus%202022.pdf">Syllabus 2022 Summer</a>, <a href="https://shasha-li.github.io/content/Syllabus%202023.pdf">Syllabus 2023 Summer</a>); 
-   <br>A Talk in Lecture Series “Economy and Society”: Technological Revolution in Financial Services <a href="https://shasha-li.github.io/content/TechRevFinService.pdf">(Slides 2022/23 Winter)</a>.
+</p>
+<p style="text-align:justify"><i>Undergraduate:  </i><br>A Talk in Lecture Series “Economy and Society”: Technological Revolution in Financial Services <a href="https://shasha-li.github.io/content/TechRevFinService.pdf">(Slides 2022/23 Winter)</a>.
 </p>
 <br>
 
