--- a/research.html
+++ b/research.html
@@ -6,28 +6,17 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong><a href="https://shasha-li.github.io/content/Lighthouse-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong><br>
+<strong><a href="https://shasha-li.github.io/content/Lighthouse-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong><br><em><small> New Draft Soon!</small></em>
 <em><small>Presentation: 2024 AEA Poster (Scheduled); 2022 EEA; 2022 China Fintech Research Conference; 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; 2019 Econometric Society European Winter Meeting; Bocconi La Strada Seminar; 2020 Royal Economic Society's Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service on marketplace 
-  lending outcomes. From 2012, the Chinese government gradually introduced private-lending registration service centers (PLcenters) in many cities to 
-  disseminate information and financial knowledge. Exploiting the introduction of PLcenters as a natural experiment, I apply a staggered 
-  difference-in-differences (DID) analysis using a novel data set from  a leading marketplace lending platform. To address the endogeneity, 
-  I use a measure of China's political cycle as instrumental variable. I find PLcenters effectively boost the marketplace lending. Remarkably,
-  PLcenters help borrowers secure lower interest rates from the platform and reduce the dispersion of interest rates. Less sophisticated borrowers
-  mainly drive the effects. The findings imply PLcenters reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
+  </b>Technology has brought numerous unsophisticated individuals to marketplaces. This paper sheds light on search frictions in a two-sided online personal loan market. Empirical evidence reveals that borrowers encounter a concave demand curve in this market. However, due to limited knowledge, borrowers fail to propose optimal interest rates near average.  Exploiting the staggered introduction of private lending registration service centers (PLcenters) in Chinese cities, I demonstrate the role of public information services in mitigating frictions and improving market outcomes. These PLcenters aim to disseminate financial knowledge and enhance transparency. Using staggered difference-in-differences (DID) analysis, I find PLcenters effectively boost marketplace lending and increase match rates. Remarkably, PLcenters help borrowers, especially those less sophisticated, propose better interest rates, leading to lower costs and reduced interest rate dispersion.  In addition, I present a directed search model to explain economic mechanisms and provide welfare implications.
   </p><br>
 
-<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Category Learning</a></strong> 
+<strong><a href="https://shasha-li.github.io/content/Green.pdf">Investor Attention and Capital Structure</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
 <em><small>Presentation: 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b> We investigate how the attention allocation of green-motivated investors changes information asymmetry in financial markets and 
-  thus affects firms' capital structure and financing costs. To guide our empirical analysis, we propose a model where an investor with
-  green taste endogenously allocates attention to market or firm-specific shocks.  We find that more green-motivated investors tend to
-  give more attention to green firm-level information instead of market-level information. As a result, higher green taste leads to less category 
-  learning behavior and reduces the information asymmetry. Furthermore, we find higher green taste results in lower leverage and 
-  lower cost of capital of green firms. 
+  </b>We investigate how optimal attention allocation of green-motivated investors changes information asymmetry in financial markets and thus affects firms' financing costs. To guide our empirical analysis, we propose a model where an investor with green taste endogenously allocates limited attention to study market-level or firm-specific fundamental shocks. We find that more green-motivated investors tend to pay more attention to green firm-level information than market-level information. Thus, higher green taste leads to less category learning behaviour. It reduces the information asymmetry of green firms, leading to lower leverage and lower cost of equity capital. Moreover, the information asymmetry of brown firms and the market increases with the green taste. Greater green attention is associated with less market efficiency. We provide empirical evidence to support our model predictions by using US data. Our paper shows how the growing demand for sustainable investing shifts investors' attention and benefits eco-friendly firms. 
   </p><br>
 
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
@@ -42,18 +31,12 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 
 <strong><big><a>Work in Progress</a></big></strong> <br> <br> 
-
-
-<strong><a>Data Manipulation in Marketplace Lending</a></strong>
+ 
+<strong><a href="https://shasha-li.github.io/content/Manipulation.pdf">Data Manipulation in Marketplace Lending</a></strong> 
 <br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
 <em><small>Presentation: 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b> We detect loan repayment performance data manipulation in online marketplace lending and explore how information manipulation affects market outcomes especially market efficiency. 
-  Using a data set of peer-to-peer loans from a leading online lending platform in China, we find that the platform substantially 
-  under-report the default rate by cooperating with an offline sister company. Our baseline results suggest that the monthly default
-  rates are on average under-reported by 14%. The data shows that the LGD-adjusted interest rate fails to predict the default, 
-  and the market is not efficient. Furthermore, hidden default data drives the online market further away from information efficiency.
-  And liquidity plays an important role in the deviations of the market prices from the information-efficient level.
+  </b> We document that online marketplace lending platforms only selectively disclose their data, which significantly reduces market efficiency. Using peer-to-peer (P2P) lending data from a leading platform in China, we observe that the platform substantially under-reports actual loan default rates by cooperating with offline sister companies and using the risk control fund. Our baseline estimations suggest that the monthly default rates are under-reported by at least 5.26 percentage points on average. The Loss Given Default (LGD)-adjusted interest rate in the online lending market is not at a market-efficient level. The behaviour of hiding default data drives the online market further away from information efficiency and lowers the quality of active borrowers. Moreover, evidence from secondary market loan trading implies hiding default rates makes the market more fragile. 
   </p><br>
 <br> 
 <i>*: presented by coauthor(s)</i>
