--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@ permalink: /research/
   </b>Technology has brought numerous unsophisticated individuals to marketplaces. This paper sheds light on search frictions in a two-sided online personal loan market. Empirical evidence reveals that borrowers encounter a concave demand curve in this market. However, due to limited knowledge, borrowers fail to propose optimal interest rates near average.  Exploiting the staggered introduction of private lending registration service centers (PLcenters) in Chinese cities, I demonstrate the role of public information services in mitigating frictions and improving market outcomes. These PLcenters aim to disseminate financial knowledge and enhance transparency. Using staggered difference-in-differences (DID) analysis, I find PLcenters effectively boost marketplace lending and increase match rates. Remarkably, PLcenters help borrowers, especially those less sophisticated, propose better interest rates, leading to lower costs and reduced interest rate dispersion.  In addition, I present a directed search model to explain economic mechanisms and provide welfare implications.
   </p><br>
 
-<strong><a href="https://shasha-li.github.io/content/Green.pdf">Investor Attention and Capital Structure</a></strong> 
+<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Capital Structure</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
 <em><small>Presentation: 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
@@ -34,7 +34,7 @@ economy with higher money growth rate only in the long-run but not in the short-
  
 <strong><a href="https://shasha-li.github.io/content/Manipulation.pdf">Data Manipulation in Marketplace Lending</a></strong> 
 <br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
-<em><small>Presentation: 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<em><small>Presentation: 2nd International Cardiff Fintech Conference (Scheduled); 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We document that online marketplace lending platforms only selectively disclose their data, which significantly reduces market efficiency. Using peer-to-peer (P2P) lending data from a leading platform in China, we observe that the platform substantially under-reports actual loan default rates by cooperating with offline sister companies and using the risk control fund. Our baseline estimations suggest that the monthly default rates are under-reported by at least 5.26 percentage points on average. The Loss Given Default (LGD)-adjusted interest rate in the online lending market is not at a market-efficient level. The behaviour of hiding default data drives the online market further away from information efficiency and lowers the quality of active borrowers. Moreover, evidence from secondary market loan trading implies hiding default rates makes the market more fragile. 
   </p><br>
