--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ title:  Shasha Li 厉莎莎
  <br><br>
   
   <p style="text-align:left;">Welcome!
-   <br><br> I'm Shasha, but you can totally call me Lisa too (it sounds a lot like my full Chinese name). I am a W1 Junior Professor at
+   <br><br> I'm Shasha, but you can totally call me Lisa too (it sounds a lot like my full Chinese name). 
+     <br><br>
+    I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg (OVGU) in Germany.
   <br><br>
 I mainly study the impact of technological change and information frictions on financing activities and their subsequent real economic impacts. I am particularly enthusiastic about bridging theoretical frameworks and empirical analysis in my work.
