--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title:  Shasha Li 厉莎莎
  <br><br>
   
   <p style="text-align:left;">Welcome!
-   <br><br> I'm Shasha, you can call me Lisa too which sounds a lot like my full Chinese name. 
+   <br><br> I'm Shasha, you can call me Lisa too, which sounds a lot like my full Chinese name. 
      <br><br>
     I am a W1 Junior Professor at
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg (OVGU) in Germany.
