--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@ economy with higher money growth rate only in the long-run but not in the short-
  
 <strong><a href="https://shasha-li.github.io/content/Manipulation.pdf">Data Manipulation in Marketplace Lending</a></strong> 
 <br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
-<em><small>Presentation: 2nd International Cardiff Fintech Conference (Scheduled); 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<em><small>Presentation: EWMES 2023, Manchester (Scheduled); 2nd International Cardiff Fintech Conference (Scheduled); 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We document that online marketplace lending platforms only selectively disclose their data, which significantly reduces market efficiency. Using peer-to-peer (P2P) lending data from a leading platform in China, we observe that the platform substantially under-reports actual loan default rates by cooperating with offline sister companies and using the risk control fund. Our baseline estimations suggest that the monthly default rates are under-reported by at least 5.26 percentage points on average. The Loss Given Default (LGD)-adjusted interest rate in the online lending market is not at a market-efficient level. The behaviour of hiding default data drives the online market further away from information efficiency and lowers the quality of active borrowers. Moreover, evidence from secondary market loan trading implies hiding default rates makes the market more fragile. 
   </p><br>
