--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@ permalink: /research/
   </p><br>
 
 <strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Capital Structure</a></strong> 
-<br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
+<br>with <a href="https://biao-yang-sjtu.github.io/">Biao Yang</a><br>
 <em><small>Presentation: CFAC2023 (Scheduled*); 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>We investigate how optimal attention allocation of green-motivated investors changes information asymmetry in financial markets and thus affects firms' financing costs. To guide our empirical analysis, we propose a model where an investor with green taste endogenously allocates limited attention to study market-level or firm-specific fundamental shocks. We find that more green-motivated investors tend to pay more attention to green firm-level information than market-level information. Thus, higher green taste leads to less category learning behaviour. It reduces the information asymmetry of green firms, leading to lower leverage and lower cost of equity capital. Moreover, the information asymmetry of brown firms and the market increases with the green taste. Greater green attention is associated with less market efficiency. We provide empirical evidence to support our model predictions by using US data. Our paper shows how the growing demand for sustainable investing shifts investors' attention and benefits eco-friendly firms. 
