--- a/research.html
+++ b/research.html
@@ -12,7 +12,7 @@ permalink: /research/
   </b>Technology has brought numerous unsophisticated individuals to marketplaces. This paper sheds light on search frictions in a two-sided online personal loan market. Empirical evidence reveals that borrowers encounter a concave demand curve in this market. However, due to limited knowledge, borrowers fail to propose optimal interest rates near average.  Exploiting the staggered introduction of private lending registration service centers (PLcenters) in Chinese cities, I demonstrate the role of public information services in mitigating frictions and improving market outcomes. These PLcenters aim to disseminate financial knowledge and enhance transparency. Using staggered difference-in-differences (DID) analysis, I find PLcenters effectively boost marketplace lending and increase match rates. Remarkably, PLcenters help borrowers, especially those less sophisticated, propose better interest rates, leading to lower costs and reduced interest rate dispersion.  In addition, I present a directed search model to explain economic mechanisms and provide welfare implications.
   </p><br>
 
-<strong><a href="https://shasha-li.github.io/content/Green.pdf">Green Investing, Information Asymmetry, and Capital Structure</a></strong> 
+<strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4589189">Green Investing, Information Asymmetry, and Capital Structure</a></strong> 
 <br>with <a href="https://biao-yang-sjtu.github.io/">Biao Yang</a><br>
 <em><small>Presentation: AFA AFFECT Mentoring (Scheduled); CFAC2023; 2023 EEA*; Yonsei university; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
