--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ permalink: /research/
 <br> 
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br> <br> 
-&#x2024 FMA Europe, Big data availability and Asymmetric Voluntary Disclosures, <em><small>by Clark Liu, Yancheng Qiu, Shujing Wang, and P. Eric Yeung</small></em> <a href="https://shasha-li.github.io/content/Discussion-Li FMA.pdf"><small>(Discussion Slides).</small></a>
+&#x2022; 2024 FMA Europe, Big data availability and Asymmetric Voluntary Disclosures, <em><small>by Clark Liu, Yancheng Qiu, Shujing Wang, and P. Eric Yeung</small></em> <a href="https://shasha-li.github.io/content/Discussion-Li FMA.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role Of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2022 China Fintech Research Conference, Influence Of Institutional Differences On Trade Credit Use During Pandemics, <em><small>by Kung-Cheng Ho</small></em> <a href="https://shasha-li.github.io/content/Discussions_CFTRC2022.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2022 HUI workshop, Consumer Credit and Impulse Shopping, <em><small>by Valentin Burg and Jan Keil</small></em> <a href="https://shasha-li.github.io/content/Discussions_HUI2022.pdf"><small>(Discussion Slides).</small></a><br> 
