--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@ permalink: /research/
 <br> 
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br>  
-<br>&#x2022; 2024 IBEFA Summer Meeting Seattle, Unusual Financial Communication: Evidence from ChatGPT, Earnings Calls, and the Stock Market, <em><small>by Lars Beckmann, Heiner Beckmeyer, Ilias Filippou, Stefan Menze, and Guofu Zhou</small></em> <a href="https://shasha-li.github.io/content/DiscussionLiIbefaLi.pdf"><small>(Discussion Slides).</small></a>
+<br>&#x2022; 2024 IBEFA Summer, Unusual Financial Communication: Evidence from ChatGPT, Earnings Calls, and the Stock Market, <em><small>by Lars Beckmann, Heiner Beckmeyer, Ilias Filippou, Stefan Menze, and Guofu Zhou</small></em> <a href="https://shasha-li.github.io/content/DiscussionLiIbefaLi.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2024 ZEW ICT, Firms and Big Data: Adoption, Use and Impacts, <em><small>by Alejandro Rabano</small></em> <a href="https://shasha-li.github.io/content/DiscussionICT.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2024 FMA Europe, Big Data Availability and Asymmetric Voluntary Disclosures, <em><small>by Clark Liu, Yancheng Qiu, Shujing Wang, and P. Eric Yeung</small></em> <a href="https://shasha-li.github.io/content/Discussion-Li FMA.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2023 EFA, Reducing Entrepreneurial Capability Constraints: The Broader Role of Venture Capital Due-diligence, <em><small>by Juanita Gonzalez-Uribe, Robyn Klingler-Vidra, Su Wang and Xiang Yin</small></em> <a href="https://shasha-li.github.io/content/Discussions_EFA2023.pdf"><small>(Discussion Slides).</small></a>
