--- a/research.html
+++ b/research.html
@@ -6,20 +6,20 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong><a href="https://ssrn.com/abstract=4788030">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> <em><small> May 2024</small></em> <br>
+<strong><a href="https://ssrn.com/abstract=4788030">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> <em></em> <br>
 <em><small>Presentation: 2024 AEA Poster; 2022 EEA; 2022 China Fintech Research Conference; 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS Ph.D. Seminar; 2019 Econometric Society European Winter Meeting; Bocconi La Strada Seminar; 2020 Royal Economic Society's Annual Conference  (canceled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on search frictions in a two-sided online personal loan market. Technology has brought numerous unsophisticated individuals to marketplaces. Using data from a leading Chinese marketplace lending platform, I uncover the presence of a concave demand curve in this market. Borrowers in the online market are revealed mostly unsophisticated, resulting in challenges in proposing reasonable interest rates. I then exploit the staggered introduction of private lending registration service centers (PLcenters) in Chinese cities to demonstrate the role of public information services in mitigating frictions and improving the online lending market outcomes. These PLcenters aim to disseminate financial knowledge and enhance transparency. Using staggered difference-in-differences (DID) analysis, I find PLcenters effectively boost marketplace lending and increase match rates. Remarkably, PLcenters help borrowers, especially those less sophisticated, propose better interest rates, leading to reduced interest rate dispersion. In addition, I present a directed search model with imperfect private and public information to explain economic mechanisms.
   </p><br>
 
-<strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4731133">Data Manipulation in Marketplace Lending</a></strong> </strong> <em><small> Dec 2024</small></em> 
+<strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4731133">Data Manipulation in Marketplace Lending</a></strong> </strong> <em></em> 
 <br>with <a href="https://www.london.edu/phd/profiles/yutong-hu">Yutong Hu</a><br>
-<em><small>Presentation: 2024 EARIE Amsterdam; 2024 ESEM Rotterdam; 2024 EFT Edinburgh; 2024 ZEW ICT; 2024 Wharton Financial Regulation Conference; EWMES 2023, Manchester; 2nd International Cardiff Fintech Conference; 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
+<em><small>Presentation: 2025 FFMM Lancaster; 2024 EARIE Amsterdam; 2024 ESEM Rotterdam; 2024 EFT Edinburgh; 2024 ZEW ICT; 2024 Wharton Financial Regulation Conference; EWMES 2023, Manchester; 2nd International Cardiff Fintech Conference; 2023 WinE Mentoring Retreat; 2022 HU-IWH Joint Junior Seminar; 2022 China Fintech Research Conference*</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b> We show that online marketplace lending platforms selectively disclose credit risk, often reporting near-zero default rates, which significantly reduces market efficiency and stability. Using data from a leading online lending platform in China, we reveal default rates under-reported by at least 3.66 percent points monthly, through offline partnerships and risk control funds designed to promise safe returns to investors. This phenomenon is prevalent across the industry.  Our further investigation finds that these practices undermine market efficiency, and reduce existing investors' attentiveness while attracting new, less-informed investors with fragile confidence.   Moreover, we conducted an event study focused on the Ezubao scandal—a major negative shock to the industry—to examine its impact on market stability, using data from the platform's secondary market transactions. Evidence suggests that hidden default rates significantly raise the risk of investor runs, making the platform more susceptible to liquidity risk and potential collapse when facing shocks. 
   </p><br>
 
-<strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4589189">Green Investing, Information Asymmetry, and Capital Structure</a></strong> </strong> <em><small> Jan 2024</small></em> 
+<strong><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4589189">Green Investing, Information Asymmetry, and Capital Structure</a></strong> </strong> <em></em> 
 <br>with <a href="https://biao-yang-sjtu.github.io/">Biao Yang</a><br>
 <em><small>Presentation:  2024 RBFC; 2024 VfS Berlin; IAAE China 2024*; 2024 FMA Europe Turin; 2024 AFA AFFECT Mentoring; CFAC2023*; 2023 EEA*; Yonsei University; Bocconi La Strada Seminar*; 2021 Econometric Society European Winter Meeting; IWH Brown Bag Seminar</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
@@ -38,6 +38,7 @@ permalink: /research/
 <br> 
 <br> 
 <strong><big><a>Discussions</a></big></strong> <br>  
+<br>&#x2022; 2025 Nefi Mannheim, More Thank Just Talk? ECB Climate Communication, Market Expectations and Reaction, <em><small>by Felicitas Koch</small></em> <a href="https://shasha-li.github.io/content/Discussion_Nefi%20Li%202025.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2024 IBEFA Summer, Unusual Financial Communication: Evidence from ChatGPT, Earnings Calls, and the Stock Market, <em><small>by Lars Beckmann, Heiner Beckmeyer, Ilias Filippou, Stefan Menze, and Guofu Zhou</small></em> <a href="https://shasha-li.github.io/content/DiscussionLiIbefaLi.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2024 ZEW ICT, Firms and Big Data: Adoption, Use and Impacts, <em><small>by Alejandro Rabano</small></em> <a href="https://shasha-li.github.io/content/DiscussionICT.pdf"><small>(Discussion Slides).</small></a>
 <br>&#x2022; 2024 FMA Europe, Big Data Availability and Asymmetric Voluntary Disclosures, <em><small>by Clark Liu, Yancheng Qiu, Shujing Wang, and P. Eric Yeung</small></em> <a href="https://shasha-li.github.io/content/Discussion-Li FMA.pdf"><small>(Discussion Slides).</small></a>
