--- a/research.html
+++ b/research.html
@@ -30,7 +30,9 @@ permalink: /research/
 
 <strong><big><a>Work in Progress</a></big></strong> <br> <br> 
  
-<strong><a href="">Local Media Closures and Corporate Debt Financing</a></strong> 
+<strong><a href="">Local Media Closures and Corporate Debt Financing</a></strong> <br>
+<strong><a href="">The Voice of ECB and Financial Markets </a></strong> 
+<br>with <a href="https://www.tilburguniversity.edu/staff/z-liu_4">Zihao Liu</a><br>
 <br>
 <br> 
 <i>*: presented by coauthor(s)</i>
