--- a/teachings.html
+++ b/teachings.html
@@ -3,9 +3,17 @@ layout: page
 title: Teaching
 permalink: /teachings/
 ---
-<strong><a>Otto von Guericke University Magdeburg (Instructor)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i><br>Foundations for Finance (<a href="https://shasha-li.github.io/content/CPSyllabus%202021.pdf">Syllabus 2021/22 Winter</a>, <a href="https://shasha-li.github.io/content/CPSyllabus%202022.pdf">Syllabus 2022/23 Winter</a>); 
-  <br>Seminar: Fintechs and Digitalization of Banking (<a href="https://shasha-li.github.io/content/Syllabus%202022.pdf">Syllabus 2022 Summer</a>, <a href="https://shasha-li.github.io/content/Syllabus%202023.pdf">Syllabus 2023 Summer</a>); 
+
+<strong><a>Halle Institute for Economic Research (Instructor)</a></strong> <br><br>
+<p style="text-align:justify"><i>PhD: </i><br>Asset Pricing (2025 Winter);  
+</p> 
+<br>
+
+
+<strong><a>Otto von Guericke University Magdeburg (Instructor and Tutor)</a></strong> <br><br>
+<p style="text-align:justify"><i>Master: </i><br>Foundations for Finance (2021 Winter - ); 
+  <br>Seminar: Fintechs and Digitalization of Banking (2022 Summer - ); 
+  <br>Seminar: Media Economics (2026 Summer); 
 </p>
 <p style="text-align:justify"><i>Undergraduate:  </i><br>A Talk in Lecture Series “Economy and Society”: Technological Revolution in Financial Services <a href="https://shasha-li.github.io/content/TechRevFinService.pdf">(Slides 2022/23 Winter)</a>.
 </p>
